// Copyright 2021 Silent Eight Pte. Ltd.

syntax = "proto3";

package silenteight.proto.payments.bridge.internal.v1;

import "google/api/field_behavior.proto";
import "silenteight/proto/payments/bridge/internal/v1/alert_message.proto";

option java_multiple_files = true;
option java_outer_classname = "AcceptAlertCommandProto";
option java_package = "com.silenteight.proto.payments.bridge.internal.v1";

message AcceptAlertCommand {
  // The alert message to accept for processing.
  AlertMessage alert_message = 1 [(google.api.field_behavior) = REQUIRED];
}
