// Copyright 2021 Silent Eight Pte. Ltd.

syntax = "proto3";

package silenteight.proto.payments.bridge.internal.v1;

import "google/api/field_behavior.proto";
import "silenteight/proto/payments/bridge/internal/v1/alert_message.proto";

option java_multiple_files = true;
option java_outer_classname = "RejectAlertCommandProto";
option java_package = "com.silenteight.proto.payments.bridge.internal.v1";

message RejectAlertCommand {
  // The reason alert was rejected.
  enum Reason {
    REASON_UNSPECIFIED = 0;
    // The alert was rejected because it was outdated.
    OUTDATED = 1;
    // The alert was damaged.
    DAMAGED = 2;
  }

  // The alert message to reject.
  AlertMessage alert_message = 1;

  // The reason alert was rejected.
  Reason reason = 2;
}
